--- a/eric-business-website/index.html
+++ b/eric-business-website/index.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="images/project2.jpg" alt="Project 2">
+                    <img src="https://www.freepik.com/free-photo/man-smiling-with-suit-suitcase_1014681.htm#fromView=search&page=1&position=45&uuid=67f6d284-ddca-4d75-9b0d-f5c2a55fa8ed&query=bussiness+man+african+man+" alt="Project 2">
                     <div class="portfolio-overlay">
                         <h3>Market Expansion</h3>
                         <p>Business Development</p>
